2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS

2003-03-04  Michael Meeks  <michael@ximian.com>

	* Version 2.2.0.1

2003-03-04  Radek Doulik  <rodo@ximian.com>

	* bonobo/bonobo-ui-engine.c (execute_state_updates):
	increase/decrease bonobo_ui_engine_inhibit_events counter
	(real_exec_verb): return if bonobo_ui_engine_inhibit_events
	counter > 0
	(real_emit_ui_event): ditto

2003-03-01  Dave Camp  <dave@ximian.com>

	* bonobo/bonobo-ui-toolbar-control-item.c: (impl_set_tooltip),
	(impl_realize), (impl_unrealize), (impl_size_allocate), (impl_map),
	(impl_unmap), (bonobo_ui_toolbar_control_item_class_init),
	(bonobo_ui_toolbar_control_item_construct): Implement tooltips
	with an input only window instead of a GtkEventBox.

2003-02-28  Michael Meeks  <michael@localhost.localdomain>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_xml_set_image):
	NULL check on text, to guard against broken client XML,
	add warning too.

2003-02-21  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-14  Alex Duggan  <aldug@astrolinux.com>

	* configure.in: require gtk+ >= 2.2.0 for the
	multi-screen stuff.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "kn" to ALL_LINGUAS.

2003-02-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "id" to ALL_LINGUAS.

2003-02-03  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* configure.in: Write makefile doc/api/figures/Makefile.

	* doc/api/tmpl/bonobo-control-frame.sgml: Include the figure
	control-frame.png.

	* doc/api/tmpl/bonobo-control.sgml: Include control.png figure.

	* doc/api/figures/control-frame.dia, doc/api/figures/control.dia:
	New uml class diagrams showing the Bonobo::Control and
	Bonobo::ControlFrame interfaces.
	
	* doc/api/figures/Makefile.am: New makefile to convert .dia to
	.png.
