@@ -1,3 +1,10 @@
+2003-04-07  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* bonobo/bonobo-ui-toolbar.c (impl_get_property): Add container's
+	border_width to the returned preferred_width and preferred_height
+	so the toolbar gets enough allocation space when it's in a
+	non-exclusive dock item.
+
 2003-03-26  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "yi" to ALL_LINGUAS.
